primera pre-entrega proyecto final

--- a/ProyectoBackEnd/package.json
+++ b/ProyectoBackEnd/package.json
@@ -2,7 +2,7 @@
   "name": "proyectobackend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
     "start": "node .",
