--- a/ProyectoBackEnd/package.json
+++ b/ProyectoBackEnd/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "mongoose": "^7.4.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1"
   }
